k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devblog
  labels:
    app: devblog
    monitoring: "true"
